[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grid-sim"
version = "0.1.0"
description = "小型配电网保供策略模拟器"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "networkx>=2.6",
    "pydantic>=2.0",
    "rich>=12.0",
    "numpy>=1.21",
    "pandas>=1.3",
]

[project.scripts]
grid-sim = "grid_sim.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short -p no:asyncio"
